# bevy_fps_controller

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: playground.blend  playground.glb  surf_playground.blend  surf_playground.blend1  surf_playground.glb
examples/: minimal.rs  minimal_avian.rs  minimal_rapier.rs  surf.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: controller.rs  controller_avian.rs  controller_rapier.rs  controller_xpbd.rs  lib.rs
